--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ nav {
     align-items: center;
 }
 
-a {
+header nav a {
     display: flex;
     text-align: center;
     align-items: center;
@@ -21,7 +21,7 @@ background-color: #ffdf7f;
 }
 header nav img {width: 2rem
 }
-#growLi {
+#growDiv {
 
   align-items: center;
   flex-grow: 2;
@@ -31,7 +31,7 @@ header nav img {width: 2rem
   order: 0
   
 }
-a{
+.ancorCard{
     text-decoration: none;
     font-family: "Hind Siliguri", sans-serif;
 }
@@ -53,15 +53,15 @@ h1 {
     margin: 25px 0px;
     color: #732104;
 }
-.Card {
-    max-width: 100%;
-    border-radius: 20% 20% 0% 0%;
-}
 .carddiv {
     background-color: #fef7e2;
     text-align: center;
     margin-bottom: 40px;
     border-radius: 20%;
+}
+.imgCard {
+    max-width: 100%;
+    border-radius: 20% 20% 0% 0%;
 }
 .addCard {
 
