--- a/index.css
+++ b/index.css
@@ -1,71 +1,96 @@
 header {
-    
-    align-items: center;
+  align-items: center;
 }
-
 
 nav {
-    display: flex;
-    background-color:  #fef7e2;
-    align-items: center;
-}
-
-header nav a {
-    display: flex;
-    text-align: center;
-    align-items: center;
-background-color: #ffdf7f;
-    padding: 10px;
-    border-radius: 30px;
-    order: 1;
-}
-header nav img {width: 2rem
-}
-#growDiv {
-
+  display: flex;
+  flex-wrap: wrap; 
+  background-color: #fef7e2;
   align-items: center;
-  flex-grow: 2;
   justify-content: space-evenly;
+  padding-bottom: 25px;
+    border-radius: 65px;
+}
+
+ .ancorHeader {
+  
+  text-align: center;
+  
+  background-color: #ffdf7f;
+  color: #732104;
+  padding: 15px 12px;
+  border-radius: 30px;
+  order: 1;
+  text-decoration: none;
+  width: 35%;
+  height: 20px;
+  margin-top: 20px;
+  font-family: "Inter", sans-serif;
+  font-weight: bold;
+}
+
+
+
+header nav img {
+    margin-right: 15px;
+  width: 2rem;
+}
+
+
+#growDiv {
+    background-color:  #ffdf7f;
+    border-radius: 65px;
+width: 65%;
+  text-align: center;
+  margin-top: 30px;
+  
+
   font-weight: bold;
   font-size: 1.5rem;
-  order: 0
-  
+  order: 0;
+  padding: 25px;
 }
-.ancorCard{
+
+#ancorShop {
+    font-family: "Roboto", sans-serif;
+  font-weight: 700;
+    display: inline;
+    position: relative;
+    bottom: 5px;
     text-decoration: none;
-    font-family: "Hind Siliguri", sans-serif;
+    color: #732104
+}
+.ancorCard {
+  text-decoration: none;
+  font-family: "Hind Siliguri", sans-serif;
 }
 
 body {
-
-    margin: 0px 15px;
+  margin: 0px 15px;
 }
 
-
-
-
-
-
-span {display: block;}
+span {
+  display: block;
+}
 h1 {
-    text-align: center;
-    font-family: "Archivo Black", sans-serif;
-    margin: 25px 0px;
-    color: #732104;
+  text-align: center;
+  font-family: "Archivo Black", sans-serif;
+  margin: 25px 0px;
+  color: #732104;
 }
 .carddiv {
-    background-color: #fef7e2;
-    text-align: center;
-    margin-bottom: 40px;
-    border-radius: 20%;
+  background-color: orangered;
+  text-align: center;
+  margin-bottom: 40px;
+  border-radius: 20%;
+  padding-bottom: 25px;
 }
 .imgCard {
-    max-width: 100%;
-    border-radius: 20% 20% 0% 0%;
+  max-width: 100%;
+  border-radius: 20% 20% 0% 0%;
 }
 .addCard {
-
-    background-color: #ffdf7f;
-    padding: 5px 50px;
-    border-radius: 20px;
+  background-color: #ffdf7f;
+  padding: 5px 50px;
+  border-radius: 20px;
 }
